# trividuel

./: .gitignore  README.md  test_gameconnection.py  testwebsocket.py  testwebsocket2.py
backend/: pyproject.toml
backend/app/: db.py  main.py
backend/app/config/: config.py
backend/app/data/: combined_quiz.csv
backend/app/dependencies/: auth.py
backend/app/routers/: __init__.py  info.py  player.py
backend/app/schemas/: __init__.py  gamesession.py  matchmaking.py  players.py  type.py
backend/app/tests/: test_elo.py  test_gamesession.py  test_players.py  test_prepare_questions.py  test_utils.py
backend/app/utils/: country_search.py  elo.py  prepare_questions.py
backend/config/: .gitkeep  trividuel-a54e0-firebase-adminsdk-fbsvc-7b7940cce3.json
backend/scripts/: .coveragerc  start.sh  test.sh
data_prep/: question_preparation.ipynb
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  firebase.js  index.css  main.jsx
frontend/src/api/: auth.js  client.js  info.js  matchSocketStore.js  player.js  socket.js  ws.js
frontend/src/audio/: AudioProvider.jsx
frontend/src/components/: ChoiceButton.jsx  DiscordButton.jsx  EloDelta.jsx  FlashPulse.jsx  GameEndScreen.jsx  GameTopBar.jsx  LeaderboardPanel.jsx  LifeCard.jsx  Loader.jsx  PixelSkyBackground.jsx  SoundControlButton.jsx  StartButton.jsx  Timer.jsx  UserCard.jsx  VSScreen.jsx  VolumePanel.jsx
frontend/src/contexts/: AuthContext.jsx
qna_preparation/: pyproject.toml  question_preparation.ipynb
(+19 files in other folders)
