[project]
name = "trividuel"
version = "0.1.0"
description = "trivia game"
authors = [
    {name = "rrr.chanhiulok@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
package-mode = false
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "firebase (>=4.0.1,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "firebase-admin (>=6.8.0,<7.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.8"
websockets = "^15.0.1"

