[project]
name = "trividuel-qna-prep"
version = "0.1.0"
description = ""
authors = [
    {name = "reagan",email = "rrr.chanhiulok@gmail.com"}
]
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
